@@ -22,3 +22,49 @@ write_launcher() {
 	launchers_write "$@"
 }
 
+# Keep compatibility with 2.7 and older
+
+extract_and_sort_icons_from() {
+	icons_get_from_package "$@"
+}
+
+extract_icon_from() {
+	local destination
+	local file
+	destination="$PLAYIT_WORKDIR/icons"
+	mkdir --parents "$destination"
+	for file in "$@"; do
+		extension="${file##*.}"
+		case "$extension" in
+			('exe')
+				icon_extract_ico_from_exe "$file" "$destination"
+			;;
+			(*)
+				icon_extract_png_from_file "$file" "$destination"
+			;;
+		esac
+	done
+}
+
+get_icon_from_temp_dir() {
+	icons_get_from_workdir "$@"
+}
+
+move_icons_to() {
+	icons_move_to "$@"
+}
+
+postinst_icons_linking() {
+	icons_linking_postinst "$@"
+}
+
+# Keep compatibility with 2.6.0 and older
+
+set_archive() {
+	archive_set "$@"
+}
+
+set_archive_error_not_found() {
+	archive_set_error_not_found "$@"
+}
+
